avoid pc overlaping

--- a/src/css/board/block.css
+++ b/src/css/board/block.css
@@ -2,6 +2,7 @@ li {
   color: white;
   box-sizing: border-box;
   background-color: #790707;
+  text-align: center;
   outline: 1px solid;
   padding: 5px;
   width: 60px;
